<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="8dp"
    app:cardCornerRadius="12dp"
    app:cardElevation="0dp"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/textViewUserId"
            style="@style/TextCaptionOnSurface"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/userId"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewUserRealName"
            style="@style/TextTitleOnSurface"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewUserId"
            tools:text="User Real Name" />

        <View
            android:id="@+id/viewDividerHorizontal1"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:background="?android:attr/dividerHorizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewUserRealName" />

        <TextView
            android:id="@+id/textViewUserEmail"
            style="@style/TextBodyOnSurface"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/viewDividerHorizontal1" />

        <TextView
            android:id="@+id/textViewUserPhone"
            style="@style/TextBodyOnSurface"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/phone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewUserEmail" />

        <TextView
            android:id="@+id/textViewUserWebsite"
            style="@style/TextBodyOnSurface"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/website"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewUserPhone" />

        <View
            android:id="@+id/viewDividerHorizontal2"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="4dp"
            android:background="?android:attr/dividerHorizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewUserWebsite" />

        <TextView
            android:id="@+id/textViewUserZipCode"
            style="@style/TextBodyOnSurface"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/zipCode"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/viewDividerHorizontal2" />

        <TextView
            android:id="@+id/textViewUserCity"
            style="@style/TextBodyOnSurface"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/city"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewUserZipCode" />

        <TextView
            android:id="@+id/textViewUserStreet"
            style="@style/TextBodyOnSurface"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/street"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewUserCity" />

        <View
            android:id="@+id/viewDividerHorizontal3"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="4dp"
            android:background="?android:attr/dividerHorizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewUserStreet" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonUserPosts"
            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/posts"
            android:textColor="@color/colorOnBackground"
            app:layout_constraintEnd_toStartOf="@+id/buttonUserAlbums"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/viewDividerHorizontal3" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonUserAlbums"
            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/albums"
            android:textColor="@color/colorOnBackground"
            app:layout_constraintBottom_toBottomOf="@+id/buttonUserPosts"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/buttonUserPosts"
            app:layout_constraintTop_toTopOf="@+id/buttonUserPosts" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>